--- a/MarcoPoloApp/app/src/main/res/layout/activity_help.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_help.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ExpandableListView
+        android:id="@+id/Help_View"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent"
+        android:divider="@color/MarcoBlue"
+        android:dividerHeight="2sp"
+        android:childDivider="@color/streetGray"
+        android:listSelector="@color/streetGray" />
 </android.support.constraint.ConstraintLayout>
