--- a/MarcoPoloApp/app/src/main/res/menu/navigation_menu.xml
+++ b/MarcoPoloApp/app/src/main/res/menu/navigation_menu.xml
@@ -24,6 +24,7 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/nav_help"
+        android:icon="@android:drawable/ic_menu_help"
         android:title="Help" />
 
 </menu>
