--- a/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
@@ -38,13 +38,13 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/cancelMarco"
+            android:id="@+id/cancelPolo"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:elevation="12dp"
-            android:onClick="onClickDeleteMarco"
+            android:onClick="onClickDeletePolo"
             android:text="@string/delete"
             android:textAlignment="center"
             android:textAllCaps="false"
