--- a/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
@@ -18,7 +18,7 @@
         android:textSize="24sp" />
 
     <EditText
-        android:id="@+id/marcoText"
+        android:id="@+id/poloText"
         android:layout_width="match_parent"
         android:layout_height="160sp"
         android:layout_alignParentStart="true"
@@ -51,7 +51,7 @@
             android:textColor="@color/white" />
 
         <Button
-            android:id="@+id/sendMarco"
+            android:id="@+id/sendPolo"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
