--- a/MarcoPoloApp/app/src/main/res/layout/notifications.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/notifications.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/red_bubble">
@@ -10,33 +11,34 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:paddingLeft="100sp"/>-->
-    <TextView
-        android:id="@+id/notifications_header"
-        android:layout_width="match_parent"
+
+    <ImageView
+        android:id="@+id/bell_icon"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="7dp"
-        android:layout_marginLeft="15dp"
-        android:background="@color/darkPoloRed"
-        android:text="What you've missed"
-        android:textSize="22sp"
-        android:textColor="@color/darkStreetGray"/>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        app:srcCompat="@drawable/ic_notifications_active_white_24dp"
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:contentDescription="@string/notification_window_icon" />
+
+    <LinearLayout
+        android:layout_width="250dp"
+        android:layout_height="218dp"
+        android:layout_below="@+id/bell_icon"
+        android:layout_centerHorizontal="true"
         android:background="@color/streetGray"
-        android:layout_margin="5dp"
-        android:layout_below="@+id/notifications_header">
+        android:orientation="vertical">
 
         <ExpandableListView
             android:id="@+id/notificationListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
+            android:childDivider="@color/darkPoloRed"
             android:divider="@color/streetGray"
             android:dividerHeight="2sp"
-            android:childDivider="@color/darkPoloRed"
-            android:listSelector="@color/darkStreetGray"/>
+            android:listSelector="@color/darkStreetGray" />
 
-    </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
