--- a/MarcoPoloApp/app/src/main/res/layout/activity_marco.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_marco.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="@color/grassGreen">
+    android:background="@color/streetGray">
 
     <TextView
         android:id="@+id/marco_title"
